# hello-kompute

./: README.md
hello-kompute/: .gitignore  CMakeLists.txt
hello-kompute/src/: main.cpp
hello-logistic-regression/: CMakeLists.txt
hello-logistic-regression/shader/: my_shader.comp  my_shader.hpp
hello-logistic-regression/src/: main.cpp
